# RTIMULIB_EMLID_REACH_2

./: LICENSE  README.md
Linux/: CMakeLists.txt  README.md
Linux/python/tests/: Fusion.py  Publisher_data_udp.py
MPUtest/: MPU9250.cpp  MPUtest  MPUtest.cpp  Makefile  Makefile.sav
UDP sender/: Readme.md  data_imu.py  launch_udp_streamer.sh
